Changement du sharelink

--- a/src/AppBundle/Resources/views/hello.html.twig
+++ b/src/AppBundle/Resources/views/hello.html.twig
@@ -10,7 +10,7 @@
 <meta property="og:url" content="http://68k.io" />
 <meta property="og:title" content="68k - Fédérons la communauté numérique du Haut-Rhin" />
 <meta property="og:description" content="68K regroupe les entrepreneurs et les freelances animant la scène numérique du Haut-Rhin, est entièrement gratuit, et le restera toujours." />
-<meta property="og:image" content="http://localhost:8000/static/logo-68k-darkbg-slim.png" />
+<meta property="og:image" content="http://68k.io/static/share-link.png" />
 
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
