Corrections et vérification google webmaster tools

--- a/src/AppBundle/Resources/views/hello.html.twig
+++ b/src/AppBundle/Resources/views/hello.html.twig
@@ -1,6 +1,6 @@
 {% extends '::base.html.twig' %}
 
-{% block title %}68k - Fédérons la communauté numérique du Haut-Rhin{% endblock %}
+{% block title %}68K - Fédérons la communauté numérique du Haut-Rhin{% endblock %}
 
 {% block stylesheets %}
 
@@ -8,13 +8,16 @@
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@68k_io" />
 <meta property="og:url" content="http://68k.io" />
-<meta property="og:title" content="68k - Fédérons la communauté numérique du Haut-Rhin" />
+<meta property="og:title" content="68K - Fédérons la communauté numérique du Haut-Rhin" />
 <meta property="og:description" content="68K regroupe les entrepreneurs et les freelances animant la scène numérique du Haut-Rhin, est entièrement gratuit, et le restera toujours." />
 <meta property="og:image" content="http://68k.io/static/share-link.png" />
 
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<meta name="google-site-verification" content="7SbdWRBEpuTZ-GBQXZbMyTvc7uKjKbqeF9cTkZLdTO8" />
+
 <style>
+{# couleur et footer collé au bas de page #}
 body {
     background-color: #3B5998;
     display: flex;
