--- a/src/AppBundle/Resources/views/mission.html.twig
+++ b/src/AppBundle/Resources/views/mission.html.twig
@@ -8,12 +8,12 @@
 
     <h3>Mission</h3>
 
-    <p><strong>68K</strong> est une initiative conjointe d'entreprises du numérique, <strong>ayant pour mission de donner corps à un écosystème numérique dans le Haut-Rhin</strong>.</p>
-    <p>S'inspirant en celà du formidable travail d'<strong><a href="http://www.alsacedigitale.org/" target="_blank" class="white-text">Alsace Digitale</a></strong> dans le Bas-Rhin, <strong>68K</strong> se fixe également comme mission <strong>d'animer cet écosystème numérique</strong>, pour <strong>développer l'économie numérique Haut-Rhinoise</strong>, et <strong>faciliter l'accès à l'entreprenariat.</strong></p>
+    <p><strong>68K</strong> est une initiative conjointe d'entreprises du numérique, <strong>ayant pour mission de donner corps à l'écosystème numérique du Haut-Rhin</strong>.</p>
+    <p>S'inspirant en celà du formidable travail d'<strong><a href="http://www.alsacedigitale.org/" target="_blank" class="white-text">Alsace Digitale</a></strong> dans le Bas-Rhin, <strong>68K</strong> se fixe également comme mission <strong>d'animer cet écosystème numérique</strong>, et de <strong>faciliter l'accès à l'entreprenariat.</strong></p>
 
     <h3>Public cible</h3>
 
-    <p><strong>68K</strong> est ouvert à toute personne/structure se revendiquant de l'économie numérique, et ayant une activité ou une influence dans le Haut-Rhin.</p>
+    <p><strong>68K</strong> est ouvert à toute personne/structure se revendiquant de l'économie numérique, et ayant une activité dans le Haut-Rhin, ou souhaitant s'y développer.</p>
 
     <h3>Services</h3>
 
