--- a/src/AppBundle/Resources/views/mission.html.twig
+++ b/src/AppBundle/Resources/views/mission.html.twig
@@ -1,10 +1,18 @@
 {% extends 'AppBundle::mainframe.html.twig' %}
 
-{% block baseline %}<strong>Fédérons</strong> la communauté <strong>numérique</strong> du <strong>Haut-Rhin</strong>{% endblock %}
+{% block baseline %}
+    <p class="flow-text center-align">
+        <strong>Fédérons</strong> la communauté <strong>numérique</strong> du <strong>Haut-Rhin</strong>
+    </p>
+{% endblock %}
 
 {% block main %}
 
 <div class="container white-text flow-text">
+
+    <div class="row center">
+        <a href="/#form" class="btn-large waves-effect waves-light">Inscription !</a>
+    </div>
 
     <h3>Mission</h3>
 
@@ -58,7 +66,15 @@
 
     <p>À cette fin, <strong>nous cherchons le soutien d'un maximum de partenaires</strong> dans le développement et l'animation du réseau.</p>
 
-    <p>Si vous souhaitez nous soutenir dans notre mission ou notre démarche, contactez-nous à l'adresse email <a href="mailto:hello@68K.io" class="white-text"><strong>hello@68K.io</strong></a> &mdash; votre nom ou le nom de votre entreprise sera listé sur cette page comme soutien au projet.</p>
+    <p>Si vous souhaitez nous soutenir dans notre mission ou notre démarche, contactez-nous à l'adresse email <a href="mailto:hello@68k.io" class="white-text"><strong>hello@68K.io</strong></a> &mdash; votre nom ou le nom de votre entreprise sera listé sur cette page comme soutien au projet.</p>
+
+    <p>&nbsp;</p>
+
+    <div class="row center">
+        <a href="/#form" class="btn-large waves-effect waves-light">Enregistrez-vous !</a>
+    </div>
+
+    <p>&nbsp;</p>
 
 </div>
 
