--- a/src/AppBundle/Resources/views/hello.html.twig
+++ b/src/AppBundle/Resources/views/hello.html.twig
@@ -4,7 +4,7 @@
 
 {% macro form() %}
 
-<div class="card white darken-1 hoverable">
+<div class="card white darken-1 hoverable" id="form">
     <div class="card-content blue-grey-text">
         <span class="card-title">Enregistrez-vous</span>
         <p>La plateforme en ligne <strong>68K</strong> sera ouverte au courant du <strong>premier semestre 2016</strong>.</p>
@@ -22,7 +22,7 @@
         {% endif %}
 
         <div class="row">
-            <form class="col s12" action="/" method="post">
+            <form class="col s12" action="/#form" method="post">
                 <div class="row">
                     <div class="input-field col s12">
                         <input id="email" type="email" class="validate" name="email" value="{{email|default('')}}">
@@ -43,7 +43,7 @@
 {% endmacro %}
 
 {% macro done() %}
-    <div class="card white darken-1 hoverable">
+    <div class="card white darken-1 hoverable" id="form">
         <div class="card-content blue-grey-text">
             <span class="card-title">Merci de votre inscription !!</span>
             <div class="card-action">
