Ajout du soutien mediascript

--- a/src/AppBundle/Resources/views/mainframe.html.twig
+++ b/src/AppBundle/Resources/views/mainframe.html.twig
@@ -88,6 +88,7 @@ fbq('track', "PageView");</script>
                         <li><a class="grey-text text-lighten-3" href="http://netgusto.com/">Net Gusto</a></li>
                         <li><a class="grey-text text-lighten-3" href="http://www.publicore.net/">Publicore</a></li>
                         <li><a class="grey-text text-lighten-3" href="http://www.square-colmar.fr/">Square coworking</a></li>
+                        <li><a class="grey-text text-lighten-3" href="http://www.mediascript.fr/"><strong>media</strong>script</a></li>
                     </ul>
                 </div>
             </div>
