Ajout des liens de ressources

--- a/src/AppBundle/Resources/views/mainframe.html.twig
+++ b/src/AppBundle/Resources/views/mainframe.html.twig
@@ -81,6 +81,11 @@ fbq('track', "PageView");</script>
                         <a href="https://www.facebook.com/reseau68K" target="_blank" class="white-text">Sur Facebook</a><br />
                         <a href="mailto:hello@68k.io" class="white-text">Par email à hello@68k.io</a><br />
                     </p>
+                    <h5 class="white-text">Ressources</h5>
+                    <p class="grey-text text-lighten-4">
+                        <a href="https://github.com/reseau68k/68k-presse/blob/master/README.md" class="white-text">Dossier de presse</a><br />
+                        <a href="https://github.com/reseau68k" class="white-text" target="_blank">Code source sur GitHub</a>
+                    </p>
                 </div>
                 <div class="col s12 m6 l4 offset-l2">
                     <h5 class="white-text">Ils nous soutiennent</h5>
@@ -90,6 +95,8 @@ fbq('track', "PageView");</script>
                         <li><a class="grey-text text-lighten-3" href="http://www.square-colmar.fr/" target="_blank">Square coworking</a></li>
                         <li><a class="grey-text text-lighten-3" href="http://www.mediascript.fr/" target="_blank"><strong>media</strong>script</a></li>
                     </ul>
+
+                    <p><a href="/mission#soutien" class="white-text">... vous aussi, soutenez-nous !</a></p>
                 </div>
             </div>
         </div>
