--- a/src/AppBundle/Resources/views/mission.html.twig
+++ b/src/AppBundle/Resources/views/mission.html.twig
@@ -11,19 +11,19 @@
 <div class="container white-text flow-text">
 
     <div class="row center">
-        <a href="/#form" class="btn-large waves-effect waves-light">Inscription !</a>
+        <a href="/#form" class="btn-large waves-effect waves-light">Je m'inscris</a>
     </div>
 
-    <h3>Mission</h3>
+    <h3 id="mission">Mission</h3>
 
     <p><strong>68K</strong> est une initiative conjointe d'entreprises du numérique, <strong>ayant pour mission de donner corps à l'écosystème numérique du Haut-Rhin</strong>.</p>
     <p>S'inspirant en celà du formidable travail d'<strong><a href="http://www.alsacedigitale.org/" target="_blank" class="white-text">Alsace Digitale</a></strong> dans le Bas-Rhin, <strong>68K</strong> se fixe également comme mission <strong>d'animer cet écosystème numérique</strong>, et de <strong>faciliter l'accès à l'entreprenariat.</strong></p>
 
-    <h3>Public cible</h3>
+    <h3 id="public">Public cible</h3>
 
     <p><strong>68K</strong> est ouvert à toute personne/structure se revendiquant de l'économie numérique, et ayant une activité dans le Haut-Rhin, ou souhaitant s'y développer.</p>
 
-    <h3>Services</h3>
+    <h3 id="services">Services</h3>
 
     <p><strong>68K</strong> propose à ses inscrits :</p>
 
@@ -37,7 +37,7 @@
 
     <p>Les services rendus par <strong>68K</strong> sont entièrement gratuits, et le resteront toujours (en dehors des frais éventuels liés à certains évènements, des coûts de coworking, et d'une éventuelle cotisation associative).</p>
 
-    <h3>Démarche</h3>
+    <h3 id="demarche">Démarche</h3>
 
     <p>Pour mener sa mission, <strong>68K</strong> prévoit une démarche en plusieurs étapes :</p>
 
@@ -53,14 +53,14 @@
         </li>
     </ol>
 
-    <h3>Transparence</h3>
+    <h3 id="transparence">Transparence</h3>
 
     <p>Convaincus que la transparence est indispensable pour favoriser le développement des échanges, la liste des membres de <strong>68K</strong> et leurs données de profil sont publiques.</p>
 
-    <h3>Calendrier</h3>
+    <h3 id="calendrier">Calendrier</h3>
     <p><strong>68K</strong> sera opérationnel au cours du premier semestre 2016.</p>
 
-    <h3>Soutien</h3>
+    <h3 id="soutien">Soutien</h3>
 
     <p><strong>68K</strong> ne cherche pas à promouvoir l'image de ses initiateurs, mais au contraire à être un réseau commercialement neutre, légitime et ouvert.</p>
 
@@ -71,7 +71,7 @@
     <p>&nbsp;</p>
 
     <div class="row center">
-        <a href="/#form" class="btn-large waves-effect waves-light">Enregistrez-vous !</a>
+        <a href="/#form" class="btn-large waves-effect waves-light">Je m'inscris !</a>
     </div>
 
     <p>&nbsp;</p>
