White footer links

--- a/src/AppBundle/Resources/views/mainframe.html.twig
+++ b/src/AppBundle/Resources/views/mainframe.html.twig
@@ -90,10 +90,10 @@ fbq('track', "PageView");</script>
                 <div class="col s12 m6 l4 offset-l2">
                     <h5 class="white-text">Ils nous soutiennent</h5>
                     <ul>
-                        <li><a class="grey-text text-lighten-3" href="http://netgusto.com/" target="_blank">Net Gusto</a></li>
-                        <li><a class="grey-text text-lighten-3" href="http://www.publicore.net/" target="_blank">Publicore</a></li>
-                        <li><a class="grey-text text-lighten-3" href="http://www.square-colmar.fr/" target="_blank">Square coworking</a></li>
-                        <li><a class="grey-text text-lighten-3" href="http://www.mediascript.fr/" target="_blank"><strong>media</strong>script</a></li>
+                        <li><a class="white-text" href="http://netgusto.com/" target="_blank">Net Gusto</a></li>
+                        <li><a class="white-text" href="http://www.publicore.net/" target="_blank">Publicore</a></li>
+                        <li><a class="white-text" href="http://www.square-colmar.fr/" target="_blank">Square coworking</a></li>
+                        <li><a class="white-text" href="http://www.mediascript.fr/" target="_blank"><strong>media</strong>script</a></li>
                     </ul>
 
                     <p><a href="/mission#soutien" class="white-text">... vous aussi, soutenez-nous !</a></p>
